visible border for multimedia, spacing fixes

--- a/src/assets-webkit/styles/serlo-tailwind.css
+++ b/src/assets-webkit/styles/serlo-tailwind.css
@@ -114,7 +114,7 @@
     @apply serlo-sub-list min-w-180 bg-brand-50;
   }
   .serlo-img {
-    @apply inline h-auto max-w-full;
+    @apply inline h-auto max-w-full rounded-md;
   }
   .serlo-math-wrapper {
     @apply px-4 py-0.5 text-left;
